# statsutils

./: .gitignore  AUTHORS  Makefile.in  NEWS  README.md  TODO  configure  configure.ac  index.md
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  config.h.in  getns.h  hist.c  maketrix.c  pair.c  randint.c  rnorm.c  runif.c  stats.c  tokenize.c  transpose  vector.c  vector.h
