bin_PROGRAMS = hist maketrix pair rnorm runif stats tokenize
hist_SOURCES = hist.c vector.c  vector.h
maketrix_SOURCES = maketrix.c
pair_SOURCES = pair.c   vector.c  vector.h
rnorm_SOURCES = rnorm.c
runif_SOURCES = runif.c
stats_SOURCES = stats.c   vector.c  vector.h
tokenize_SOURCES = tokenize.c

dist_bin_SCRIPTS = transpose
